# evolutionIRIN

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  actuator.cpp  actuator.h  arena.cpp  arena.h  arguments.cpp  arguments.h  autopush  bluelightobject.h  bootstrap.sh  config.h  config.status  configure  configure.ac  controller.cpp  controller.h  epuck.cpp  epuck.h  experiment.cpp  experiment.h  fitnessfunction.cpp  fitnessfunction.h  general.cpp  general.h  geometry.cpp  geometry.h  groundmemorysensor.cpp  individual.cpp  individual.h  iri1controller.cpp  iri1controller.h  iri1exp.cpp  iri1exp.h  irsim  irsime  main.cpp  (+20 more)
collisions/: Makefile  Makefile.am  Makefile.in  axisalignedboundingbox.cpp  axisalignedboundingbox.h  circlecollisionobject.cpp  circlecollisionobject.h  collisioncallback.h  collisionepuck.cpp  collisionepuck.h  collisionepuckgripper.cpp  collisionepuckgripper.h  collisionepucksimple.cpp  collisionepucksimple.h  collisionhandler.cpp  collisionhandler.h  collisionmanager.cpp  collisionmanager.h  collisionobject.cpp  collisionobject.h  collisionpuck.cpp  collisionpuck.h  compoundcollisionobject.cpp  compoundcollisionobject.h  rectanglecollisionobject.cpp  rectanglecollisionobject.h  ringcollisionobject.cpp  ringcollisionobject.h
collisions/.deps/: axisalignedboundingbox.Po  circlecollisionobject.Po  collisionepuck.Po  collisionepuckgripper.Po  collisionepucksimple.Po  collisionhandler.Po  collisionmanager.Po  collisionobject.Po  collisionpuck.Po  compoundcollisionobject.Po  rectanglecollisionobject.Po  ringcollisionobject.Po
controllers/: Makefile  Makefile.am  Makefile.in  braitenbergvehicle2controller.cpp  braitenbergvehicle2controller.h  ctrnndistributedcontroller.cpp  ctrnndistributedcontroller.h  ctrnnlayercontroller.cpp  ctrnnlayercontroller.h  iri1controller (conflicted copy 2021-04-10 180336).cpp  iri1controller (conflicted copy 2021-04-14 185043).cpp  iri1controller.cpp  iri1controller.h  iri2controller.cpp  iri2controller.h  iri3controller.cpp  iri3controller.h  layercontroller.cpp  layercontroller.h  nncontroller.cpp  nncontroller.h  nndistributedcontroller.cpp  nndistributedcontroller.h  perceptroncontroller.cpp  perceptroncontroller.h  subsumptiongarbagecontroller.cpp  subsumptiongarbagecontroller.h  subsumptionlightcontroller.cpp  subsumptionlightcontroller.h  testbatterycontroller.cpp  testbatterycontroller.h  testbluelightcontroller.cpp  testbluelightcontroller.h  testcomcontroller.cpp  testcomcontroller.h  testcompasscontroller.cpp  testcompasscontroller.h  testcontactcontroller.cpp  testcontactcontroller.h  testencodercontroller.cpp  (+13 more)
controllers/.deps/: braitenbergvehicle2controller.Po  ctrnndistributedcontroller.Po  ctrnnlayercontroller.Po  iri1controller.Po  iri2controller.Po  iri3controller.Po  layercontroller.Po  nncontroller.Po  nndistributedcontroller.Po  perceptroncontroller.Po  subsumptiongarbagecontroller.Po  subsumptionlightcontroller.Po  testbatterycontroller.Po  testbluelightcontroller.Po  testcomcontroller.Po  testcompasscontroller.Po  testcontactcontroller.Po  testencodercontroller.Po  testgroundcontroller.Po  testlightcontroller.Po  testproxcontroller.Po  testredlightcontroller.Po  testswitchlightcontroller.Po  testwheelscontroller.Po
experiments/: Makefile  Makefile.am  Makefile.in  braitenbergvehicle2experiment.cpp  braitenbergvehicle2experiment.h  ctrnnexp.cpp  ctrnnexp.h  iri1exp.cpp  iri1exp.h  iri2exp.cpp  iri2exp.h  iri3exp.cpp  iri3exp.h  subsumptiongarbageexp.cpp  subsumptiongarbageexp.h  subsumptionlightexp.cpp  subsumptionlightexp.h  testbatteryexp.cpp  testbatteryexp.h  testbluelightexp.cpp  testbluelightexp.h  testcomexp.cpp  testcomexp.h  testcompassexp.cpp  testcompassexp.h  testcontactexp.cpp  testcontactexp.h  testencoderexp.cpp  testencoderexp.h  testevoexp.cpp  testevoexp.h  testgroundexp.cpp  testgroundexp.h  testlightexp.cpp  testlightexp.h  testneuronexp.cpp  testneuronexp.h  testproxexp.cpp  testproxexp.h  testredlightexp.cpp  (+5 more)
experiments/.deps/: braitenbergvehicle2experiment.Po  ctrnnexp.Po  iri1exp.Po  iri2exp.Po  iri3exp.Po  subsumptiongarbageexp.Po  subsumptionlightexp.Po  testbatteryexp.Po  testbluelightexp.Po  testcomexp.Po  testcompassexp.Po  testcontactexp.Po  testencoderexp.Po  testevoexp.Po  testgroundexp.Po  testlightexp.Po  testneuronexp.Po  testproxexp.Po  testredlightexp.Po  testswitchlightexp.Po  testwheelsexp.Po
fitnessfunctions/: Makefile  Makefile.am  Makefile.in  avoidcollisionsfitnessfunction.cpp  avoidcollisionsfitnessfunction.h  garbagefitnessfunction.cpp  garbagefitnessfunction.h  irifitnessfunction.cpp  irifitnessfunction.h  lightfitnessfunction.cpp  lightfitnessfunction.h  loadfitnessfunction.cpp  loadfitnessfunction.h  perceptronfitnessfunction.cpp  perceptronfitnessfunction.h
fitnessfunctions/.deps/: avoidcollisionsfitnessfunction.Po  garbagefitnessfunction.Po  irifitnessfunction.Po  lightfitnessfunction.Po  loadfitnessfunction.Po
sensors/: Makefile  Makefile.am  Makefile.in  batterysensor.cpp  batterysensor.h  bluebatterysensor.cpp  bluebatterysensor.h  bluelightsensor (conflicted copy 2021-04-11 154916).cpp  bluelightsensor.cpp  bluelightsensor.h  compasssensor.cpp  compasssensor.h  comsensor.cpp  comsensor.h  contactsensor.cpp  contactsensor.h  encodersensor.cpp  encodersensor.h  epuckproximitysensor.cpp  epuckproximitysensor.h  groundmemorysensor.cpp  groundmemorysensor.h  groundsensor.cpp  groundsensor.h  lightsensor.cpp  lightsensor.h  lookupIR.cpp  lookupIR.h  proximitysensorpolynomial.cpp  proximitysensorpolynomial.h  proxsensor.cpp  proxsensor.h  randbsensor.cpp  randbsensor.h  realbluelightsensor.cpp  realbluelightsensor.h  reallightsensor.h  realredlightsensor.cpp  realredlightsensor.h  redbatterysensor.cpp  (+3 more)
sensors/.deps/: batterysensor.Po  bluebatterysensor.Po  bluelightsensor.Po  compasssensor.Po  comsensor.Po  contactsensor.Po  encodersensor.Po  epuckproximitysensor.Po  groundmemorysensor.Po  groundsensor.Po  lightsensor.Po  proximitysensorpolynomial.Po  proxsensor.Po  randbsensor.Po  realbluelightsensor.Po  reallightsensor.Po  redlightsensor.Po  (+2 more)
(+137 files in other folders)
