AM_CPPFLAGS = -I.. -I../arenas -I../objects

lib_LIBRARIES = libcollisions.a
libcollisions_a_SOURCES = collisionhandler.cpp \
				collisionobject.cpp \
				collisionmanager.cpp \
				compoundcollisionobject.cpp	\
				collisionepuck.cpp \
				collisionepuckgripper.cpp \
				collisionpuck.cpp \
				collisionepucksimple.cpp \
				rectanglecollisionobject.cpp \
				axisalignedboundingbox.cpp \
				ringcollisionobject.cpp	\
				circlecollisionobject.cpp
