AM_CPPFLAGS = -I.. -I../objects -I../arenas -I../sensors -I../controllers -I../actuators -I../collisions 

lib_LIBRARIES             = libexperiments.a
libexperiments_a_SOURCES  = 	testwheelsexp.cpp \
															testlightexp.cpp \
															testswitchlightexp.cpp \
															testbluelightexp.cpp \
															testproxexp.cpp \
															testcontactexp.cpp \
															braitenbergvehicle2experiment.cpp \
															testevoexp.cpp \
															iri1exp.cpp \
															iri2exp.cpp \
															iri3exp.cpp \
															testgroundexp.cpp \
															testbatteryexp.cpp \
															testneuronexp.cpp \
															subsumptiongarbageexp.cpp \
															subsumptionlightexp.cpp \
															testcomexp.cpp \
															testredlightexp.cpp \
															testencoderexp.cpp \
															testcompassexp.cpp \
															ctrnnexp.cpp 
