AM_CPPFLAGS = -I/.. -I../arenas -I../collisions -I../objects -I../experiments -I../sensors -I../actuators -I../controllers

lib_LIBRARIES = libfitnessfunctions.a
libfitnessfunctions_a_SOURCES = avoidcollisionsfitnessfunction.cpp garbagefitnessfunction.cpp loadfitnessfunction.cpp irifitnessfunction.cpp lightfitnessfunction.cpp
