AM_CPPFLAGS = -I.. -I../arenas -I../collisions -I../objects -I../actuators

lib_LIBRARIES = libsensors.a
libsensors_a_SOURCES = 	epuckproximitysensor.cpp \
												proximitysensorpolynomial.cpp \
												groundsensor.cpp \
												randbsensor.cpp \
												compasssensor.cpp \
												encodersensor.cpp \
												lightsensor.cpp \
												bluelightsensor.cpp \
												contactsensor.cpp \
												proxsensor.cpp \
												groundmemorysensor.cpp \
												batterysensor.cpp \
												comsensor.cpp \
												redlightsensor.cpp \
												bluebatterysensor.cpp \
												redbatterysensor.cpp \
												reallightsensor.cpp \
												realbluelightsensor.cpp \
												realredlightsensor.cpp 
